# CryptoProtocol

./: .gitignore  CMakeLists.txt  README.md
CryptoProtocol/: .gitignore  DB.txt  client.c  client.h  crypto.c  crypto.h  install.sh  main.c  makefile  server.c  server.h
CryptoProtocol.xcodeproj/: project.pbxproj
CryptoProtocol.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CryptoProtocol.xcodeproj/xcuserdata/alexandrecetto.xcuserdatad/xcschemes/: CryptoProtocol.xcscheme  xcschememanagement.plist
CryptoProtocol/Auth/: auth.c  auth.h  main.c  main.h
CryptoProtocol/Client/: client.c  client.h
CryptoProtocol/Client/cert/: key.pem  public.pem
CryptoProtocol/Server/: server.c  server.h
CryptoProtocol/Server/cert/: cert.pem
CryptoProtocol/crypto/: crypto.c  crypto.h
